tests/baselines/reference/promiseChaining2.errors.txt
tests/cases/compiler/promiseChaining2.ts(7,45): error TS2345: Argument of type '(x: S) => string' is not assignable to parameter of type '(x: S) => Function'.
  Signature '(x: S): Function' has no corresponding signature in '(x: S) => string'
    Type 'string' is not assignable to type 'Function'.
      Property 'apply' is missing in type 'String'.


==== tests/cases/compiler/promiseChaining2.ts (1 errors) ====
    // same example but with constraints on each type parameter
    class Chain2<T extends { length: number }> {
        constructor(public value: T) { }
        then<S extends Function>(cb: (x: T) => S): Chain2<S> {
            var result = cb(this.value);
            // should get a fresh type parameter which each then call
            var z = this.then(x => result).then(x => "abc").then(x => x.length);
                                                ~~~~~~~~~~
!!! error TS2345: Argument of type '(x: S) => string' is not assignable to parameter of type '(x: S) => Function'.
!!! error TS2345:   Signature '(x: S): Function' has no corresponding signature in '(x: S) => string'
!!! error TS2345:     Type 'string' is not assignable to type 'Function'.
!!! error TS2345:       Property 'apply' is missing in type 'String'.
            return new Chain2(result);
        }
    }